--- a/dune
+++ b/dune
@@ -2,4 +2,13 @@
 
 (executable
  (name main)
- (libraries unix threads))
+ (modules main)
+ (libraries resp unix threads))
+
+(library
+ (name resp)
+ (libraries base stdio str)
+ (inline_tests)
+ (modules resp)
+ (preprocess
+  (pps ppx_inline_test ppx_assert ppx_compare ppx_sexp_conv)))
