--- a/dune
+++ b/dune
@@ -3,12 +3,12 @@
 (executable
  (name main)
  (modules main)
- (libraries resp unix threads))
+ (libraries lib unix threads))
 
 (library
- (name resp)
- (libraries base str)
+ (name lib)
+ (libraries base unix threads str)
+ (modules resp lifetime store)
  (inline_tests)
- (modules resp)
  (preprocess
   (pps ppx_inline_test ppx_assert ppx_compare ppx_sexp_conv)))
