--- a/lib/dune
+++ b/lib/dune
@@ -3,7 +3,6 @@
 (library
  (name lib)
  (libraries base unix threads str)
- (modules resp lifetime store command listutils lists streams)
  (inline_tests)
  (preprocess
-  (pps ppx_inline_test ppx_assert ppx_compare ppx_sexp_conv)))
+  (pps ppx_jane)))
