--- a/lib/dune
+++ b/lib/dune
@@ -5,4 +5,4 @@
  (libraries base unix threads str)
  (inline_tests)
  (preprocess
-  (pps ppx_jane)))
+  (pps ppx_assert ppx_inline_test ppx_expect ppx_sexp_conv ppx_compare)))
