--- a/lib/dune
+++ b/lib/dune
@@ -5,4 +5,9 @@
  (libraries base unix threads str base64)
  (inline_tests)
  (preprocess
-  (pps ppx_assert ppx_inline_test ppx_expect ppx_sexp_conv ppx_compare)))
+  (pps
+   ppx_assert
+   ppx_inline_test
+   ppx_expect
+   ppx_sexp_conv
+   ppx_compare)))
