--- a/lib/dune
+++ b/lib/dune
@@ -2,12 +2,7 @@
 
 (library
  (name lib)
- (libraries base unix threads str base64)
+ (libraries base unix threads str base64 digestif)
  (inline_tests)
  (preprocess
-  (pps
-   ppx_assert
-   ppx_inline_test
-   ppx_expect
-   ppx_sexp_conv
-   ppx_compare)))
+  (pps ppx_assert ppx_inline_test ppx_expect ppx_sexp_conv ppx_compare)))
