--- a/codecrafters_redis.opam
+++ b/codecrafters_redis.opam
@@ -9,6 +9,13 @@ homepage: "https://codecrafters.io"
 bug-reports: "https://github.com/codecrafters-io/build-your-own-redis/issues"
 depends: [
   "dune" {>= "3.16"}
+  "lwt"
+  "base"
+  "ppx_assert"
+  "ppx_inline_test"
+  "ppx_expect"
+  "ppx_sexp_conv"
+  "ppx_compare"
   "odoc" {with-doc}
 ]
 build: [
